# my_ai_powered_trading_assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  config.yaml  env.example  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  settings.yaml  tickers.txt
app/: __init__.py  config.py  config_prompts.py  config_prompts_db.py  logging_utils.py  main.py  materials_rag.py  materials_rag_supabase.py  materials_reader.py
app/auth/: __init__.py  email.py  service.py  supabase_auth.py
app/data/: __init__.py  cache.py  currency.py  ibkr_flex.py  providers.py  robinhood.py
app/db/: __init__.py  supabase_client.py
app/features/: __init__.py  brooks_patterns.py  magnets.py  ohlc_features.py
app/journal/: __init__.py  analytics.py  coach.py  ingest.py  models.py
app/llm/: __init__.py  analyzer.py  client.py  prompts.py
app/reports/: __init__.py  eod.py  premarket.py  render.py  weekly.py
app/web/: __init__.py  dependencies.py  schemas.py  server.py  utils.py
app/web/routes/: __init__.py  auth.py  imports.py  materials.py  reports.py  settings.py  strategies.py  system.py  tickers.py  trades.py
app/web/static/js/: common.js  trades.js
app/web/templates/: add_trade.html  analysis.html  base.html  dashboard.html  import.html  materials.html  reports.html  settings.html  stats.html  strategies.html  tickers.html  trade_detail.html  trades.html
app/web/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify.html
data/: .gitkeep
data/chroma_db/: chroma.sqlite3  index_meta.json
data/chroma_db/6dde2512-6243-4207-9b83-3c12690f40c9/: index_metadata.pickle
data/databento/: MES_ohlcv-1d_2025-11-12_2025-11-12.dbn.zst  MES_ohlcv-1h_2025-11-12_2025-11-12.dbn.zst
data/llm_logs/: trade_43_HKEX_981_20260120_182007.json  trade_44_MES=F_20260122_130616.json  trade_44_MES=F_20260122_132042.json  trade_45_MES=F_20260122_153857.json  trade_46_MES=F_20260122_152847.json  trade_46_MES=F_20260122_165137.json  trade_47_MES=F_20260122_172947.json
docs/: EXAMPLES.md
imports/: README.md
materials/: TEMPLATE_trading_rules.txt
outputs/: .gitkeep
scripts/: download_databento.py  migrate_data_to_user.py  migrate_to_supabase.py
supabase/migrations/: 001_initial_schema.sql  002_storage_policies.sql  003_trade_fills.sql
tests/: __init__.py  conftest.py  test_ai_analysis.py  test_analytics.py  test_ibkr_flex.py  test_journal.py  test_patterns.py  test_providers.py  test_smoke.py
